# cardiac-fp-analyzer

./: .gitignore  ASSESSMENT_v3.3.0.md  CDISC_SEND_Reference_Guide.docx  DOCUMENTATION.md  README.md  app.py  comparison_with_paper.md  confronto_software_vs_paper.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cardiac_fp_analyzer/: __init__.py  analyze.py  arrhythmia.py  beat_detection.py  cdisc_export.py  cessation.py  channel_selection.py  config.py  filtering.py  fitted_weights.json  inclusion.py  loader.py  normalization.py  overrides.py  parameters.py  plotting.py  project.py  quality_control.py  repolarization.py  report.py  residual_analysis.py  rhythm_integration.py  risk_map.py  spectral.py  study.py
cdisc_send_output/: dm.csv  ds.csv  eg.csv  ex.csv  ts.csv  tx.csv
docs/decisions/: 0001-abandon-streamlit-for-pyside6.md
pyside_app/: __init__.py  main.py  project_panel.py  settings_dialog.py  settings_dialog_helpers.py  signal_viewer.py  study_panel.py  theme.py
tests/: golden_signals.py  test_amplitude_cluster_filter.py  test_analyze_sidecar_overrides.py  test_batch_error_handling.py  test_beat_alignment.py  test_beat_length_invariant.py  test_bradycardia_fpd_robustness.py  test_config.py  test_e2e_synthetic.py  test_edge_cases.py  test_golden_reference.py  test_imports.py  test_modules.py  test_output_modules.py  test_overrides.py  test_project.py  test_pyside_theme.py  test_qc_strict_rhythm_readmission.py  test_recompute_from_beats.py  test_repolarization_bounds.py  test_rhythm_integration.py  test_rhythm_topology.py  test_settings_dialog_helpers.py  test_slow_rhythm_segmentation.py  test_study.py  test_study_panel_file_activated.py  test_study_panel_helpers.py  test_study_panel_set_entry_channel.py  test_study_panel_update_entry.py  test_ui_cache.py  test_ui_template_banner.py
ui/: __init__.py  batch.py  cache.py  config_sidebar.py  display.py  drug_comparison.py  helpers.py  i18n.py  reports.py  single_file.py
